boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_enum_parameters.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_enum_parameter\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public enum Status: UInt8, Hashable, Sendable, CaseIterable {
    case ready = 1
    case busy = 2

    @usableFromInline init(fromC c: UInt8) {
        self = Status(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }
}

public protocol StatusMapper: AnyObject {
    func mapStatus(status: Status) -> Status
}

private final class StatusMapperWrapper {
    let impl: StatusMapper

    init(_ impl: StatusMapper) {
        self.impl = impl
    }
}

private var __boltffi_status_mapper_vtable: ___StatusMapperVTable = {
    ___StatusMapperVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        map_status: { handle, status in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            return wrapper.impl.mapStatus(status: Status(fromC: status)).cValue
        }
    )
}()

private enum StatusMapperBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_status_mapper(&__boltffi_status_mapper_vtable)
    }()

    static func create(_ impl: StatusMapper) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = StatusMapperWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_status_mapper(handle)
    }
}

public func mapStatus(mapper: StatusMapper, status: Status) -> Status {
    return Status(fromC: boltffi_function_demo_map_status(StatusMapperBridge.create(mapper), status.cValue))
}
