boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_method_callback_handle_parameters.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_method_callback_handle_parameter\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol Child: AnyObject {
    func onValue(value: UInt32) -> UInt32
}

private final class ChildWrapper {
    let impl: Child

    init(_ impl: Child) {
        self.impl = impl
    }
}
private protocol ChildBridgeable: Child {
    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle
}

private final class ChildProxy: Child, ChildBridgeable {
    private let handle: BoltFFICallbackHandle

    init(_ handle: BoltFFICallbackHandle) {
        self.handle = handle
    }

    deinit {
        ChildBridge.release(handle)
    }

    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle {
        ChildBridge.clone(handle)
    }

    func onValue(value: UInt32) -> UInt32 {
        guard let vtable = handle.vtable?.assumingMemoryBound(to: ___ChildVTable.self),
              let invoke = vtable.pointee.on_value else {
            fatalError("missing callback vtable entry")
        }
        return invoke(handle.handle, value)
    }
}

private var __boltffi_child_vtable: ___ChildVTable = {
    ___ChildVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ChildWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ChildWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        on_value: { handle, value in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ChildWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            return wrapper.impl.onValue(value: value)
        }
    )
}()

private enum ChildBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_child(&__boltffi_child_vtable)
    }()
    static func release(_ handle: BoltFFICallbackHandle) {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ChildVTable.self),
              let free = vtable.pointee.free else { return }
        free(handle.handle)
    }

    static func clone(_ handle: BoltFFICallbackHandle) -> BoltFFICallbackHandle {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ChildVTable.self),
              let clone = vtable.pointee.clone else {
            return BoltFFICallbackHandle(handle: 0, vtable: nil)
        }
        return BoltFFICallbackHandle(handle: clone(handle.handle), vtable: handle.vtable)
    }

    static func create(_ impl: Child) -> BoltFFICallbackHandle {
        _ = register
        if let bridgeable = impl as? ChildBridgeable {
            return bridgeable._boltffiRetainedCallbackHandle()
        }
        let wrapper = ChildWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_child(handle)
    }
    static func wrap(_ handle: BoltFFICallbackHandle) -> any Child {
        _ = register
        return ChildProxy(handle)
    }
}

public protocol Listener: AnyObject {
    func onChild(child: Child)
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}

private var __boltffi_listener_vtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        on_child: { handle, child in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            wrapper.impl.onChild(child: ChildBridge.wrap(child))
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&__boltffi_listener_vtable)
    }()

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
}
